# xrefer

./: .gitmodules  README.md  ida-plugin.json  pyproject.toml  requirements-dev.txt  requirements-ida.txt  requirements.txt
docs/: usage.md
docs/examples/: string_extraction_backends.py
plugins/: xrefer.py
plugins/xrefer/: __init__.py  cli.py  plugin.py
plugins/xrefer/backend/: __init__.py  base.py  factory.py  types.py  utils.py
plugins/xrefer/backend/binaryninja/: __init__.py  backend.py
plugins/xrefer/backend/ghidra/: __init__.py  backend.py
plugins/xrefer/backend/ida/: __init__.py  backend.py
plugins/xrefer/core/: __init__.py  action_handlers.py  analyzer.py  clusters.py  disasm_backend.py  help.py  helpers.py  settings.py  state_machine.py  view.py
plugins/xrefer/data/: report_tmpl.html
plugins/xrefer/gui/: __init__.py  action_handlers.py  help.py  helpers.py  settings.py  state_machine.py  view.py
plugins/xrefer/gui/legacy/: __init__.py  shim.py
plugins/xrefer/lang/: __init__.py  lang_base.py  lang_default.py  lang_registry.py  lang_rust.py
plugins/xrefer/lang/ida/: rust.py
plugins/xrefer/legacy/: shim.py
plugins/xrefer/llm/: __init__.py  artifact_analyzer.py  base.py  categorizer.py  cluster_analyzer.py  dspy_modules.py  dspy_signatures.py  models.py  models_old_langchain_backup.py  processor.py  processor_original_backup.py  prompts.py  schemas.py
plugins/xrefer/llm/templates/: __init__.py  artifact_analyzer.py  categorizer.py  cluster_analyzer.py
plugins/xrefer/loaders/: __init__.py  capa.py
plugins/xrefer/loaders/trace/: __init__.py  base.py  cape_parser.py  factory.py  vmray_parser.py
plugins/xrefer/report/: html_report.py
scripts/: compare.py  format.sh  test.py  test_bn.py  test_ida.py
tests/: conftest.py
tests/integration/: conftest.py  test_backend_size.py  test_backend_xrefs.py  test_lang_cross_backend_e2e.py
